tests/compilefail28.out
[1mtests/compilefail28.pas:5:14: [0m[1m[91merror:[0m Self-referencing constant definition 'negpi'
     5 | 	negpi = -negpi;